--- a/src/pages/SearchResult/styles/search_results.css
+++ b/src/pages/SearchResult/styles/search_results.css
@@ -1,1 +1,46 @@
-@import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap");/*# sourceMappingURL=search_results.css.map */
+@import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap");
+.attention-window {
+  width: 100%;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  border: 1px solid #9D9D9D;
+  border-radius: 8px;
+}
+.attention-window .window-heading {
+  color: #262626;
+  font-feature-settings: "clig" off, "liga" off;
+  font-family: Lato;
+  font-size: clamp(8px, 3.73824vw, 32px);
+  font-style: normal;
+  font-weight: 600;
+  line-height: 125%;
+  margin-top: clamp(8px, 3.73824vw, 32px);
+}
+.attention-window .attention-row {
+  width: 90%;
+  height: auto;
+  margin-top: clamp(8px, 3.73824vw, 32px);
+  display: flex;
+  align-items: center;
+}
+.attention-window .attention-row .attention-icon {
+  color: #FF7A00;
+  font-size: clamp(9px, 4.20552vw, 36px);
+}
+.attention-window .attention-row .icon-text {
+  width: 100%;
+  color: #9D9D9D;
+  font-feature-settings: "clig" off, "liga" off;
+  font-family: Lato;
+  font-size: clamp(7px, 3.27096vw, 28px);
+  font-style: normal;
+  font-weight: 400;
+  line-height: 142.857%;
+  margin-left: clamp(4px, 1.86912vw, 16px);
+}
+.attention-window .next {
+  margin-bottom: clamp(8px, 3.73824vw, 32px);
+}/*# sourceMappingURL=search_results.css.map */
