--- a/src/pages/SearchResult/styles/search_results.sass
+++ b/src/pages/SearchResult/styles/search_results.sass
@@ -1,1 +1,47 @@
 @import "../../../styles/variables/variables"
+
+.attention-window
+    width: 100%
+    height: auto
+    display: flex
+    flex-direction: column
+    align-items: center
+    justify-content: flex-start
+    border: 1px solid $light_text
+    border-radius: 8px
+
+    .window-heading
+        color: $primary_gray
+        font-feature-settings: 'clig' off, 'liga' off
+        font-family: Lato
+        font-size: $font16mob
+        font-style: normal
+        font-weight: 600
+        line-height: 125%
+        margin-top: $m16mob
+
+    .attention-row
+        width: 90%
+        height: auto
+        margin-top: $m16mob
+        display: flex
+        align-items: center
+        // border: 2px solid red
+
+        .attention-icon
+            color: $selected
+            font-size: $font18mob
+
+        .icon-text
+            width: 100%
+            color: $light_text
+            font-feature-settings: 'clig' off, 'liga' off
+            font-family: Lato
+            font-size: $font14mob
+            font-style: normal
+            font-weight: 400
+            line-height: 142.857%
+            margin-left: $m8mob
+
+    .next
+        margin-bottom: $m16mob
