--- a/src/pages/CartPage/styles/cart_page.sass
+++ b/src/pages/CartPage/styles/cart_page.sass
@@ -1,1 +1,141 @@
 @import "../../../styles/variables/variables"
+
+.margin
+    display: flex
+    align-items: center
+    margin-top: $m32mob
+
+    .quantity
+        color: $light_text
+        font-family: Lato
+        font-size: $font18mob
+        font-style: normal
+        font-weight: 600
+        line-height: 166.667%
+        margin-left: $m8mob
+
+.cards
+    width: 100%
+    height: auto
+    display: flex
+    flex-direction: column
+
+    .card
+        width: 100%
+        height: auto
+        display: flex
+        flex-direction: column
+        margin-top: $m32mob
+
+        .card-upper-row
+            width: 100%
+            height: auto
+            display: flex
+            align-items: center
+
+            .card-image
+                width: clamp(40px,18.6912vw,160px)
+                height: clamp(40px,18.6912vw,160px)
+
+            .card-content
+                display: flex
+                flex-direction: column
+                align-items: flex-start
+                margin-left: $m16mob
+
+                .card-heading
+                    color: $primary_gray
+                    font-family: Lato
+                    font-size: $font16mob
+                    font-style: normal
+                    font-weight: 800
+                    line-height: 142.857%
+
+                .color-and-price
+                    width: 100%
+                    height: auto
+                    display: flex
+                    align-items: center
+                    justify-content: space-between
+
+                    .colors
+                        display: flex
+                        align-items: center
+
+                        .color-text
+                            color: $light_text
+                            font-family: Lato
+                            font-size: $font14mob
+                            font-style: normal
+                            font-weight: 400
+                            line-height: 142.857%
+
+                        .color
+                            width: clamp(6px,2.80368vw,24px)
+                            height: clamp(6px,2.80368vw,24px)
+                            background-color: $button_blue
+                            border-radius: 50px
+                            margin-left: $m8mob
+
+                    .price
+                        color: $secondary_text
+                        text-align: right
+                        font-family: Lato
+                        font-size: $font14mob
+                        font-style: normal
+                        font-weight: 400
+                        line-height: 142.857%
+
+        .card-lower-row
+            width: 100%
+            height: auto
+            display: flex
+            align-items: center
+            justify-content: space-between
+            margin-top: $m16mob
+
+            .quantity-container
+                width: auto
+                display: flex
+                flex-direction: row
+                align-items: center
+
+                .quantity-text
+                    color: $primary_gray
+                    font-family: Lato
+                    font-size: $font16mob
+                    font-style: normal
+                    font-weight: 600
+                    line-height: 206.908%
+
+                .quantity-counter
+                    width: clamp(50.5px,23.59764vw,202px)
+                    height: clamp(20px,9.3456vw,80px)
+                    display: flex
+                    align-items: center
+                    justify-content: center
+                    border-radius: 4px
+                    border: 1px solid $gray
+
+                    .quantity-icon
+                        font-size: $font14mob
+                        color: $light_text
+
+                    .minus
+                        margin-right: $m16mob
+
+                    .plus
+                        margin-left: $m16mob
+
+            .price
+                color: $secondary_text
+                text-align: center
+                font-family: Lato
+                font-size: $font14mob
+                font-style: normal
+                font-weight: 400
+                line-height: 142.857%
+
+            .trash-icon
+                color: $secondary_text
+                font-size: $font18mob
