--- a/src/pages/CartPage/styles/cart_page.sass
+++ b/src/pages/CartPage/styles/cart_page.sass
@@ -1,4 +1,5 @@
 @import "../../../styles/variables/variables"
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100;200;300;400;500;600;700;800;900&display=swap')
 
 .margin
     display: flex
@@ -139,3 +140,146 @@
             .trash-icon
                 color: $secondary_text
                 font-size: $font18mob
+
+.summary
+    width: 100%
+    height: auto
+    display: flex
+    flex-direction: column
+    justify-content: center
+    align-items: center
+    background-color: #E9E9E9
+    margin-top: $m64mob
+
+    .summary-container
+        width: 47.69874476987448%
+        height: auto
+        display: flex
+        flex-direction: column
+        align-items: flex-start
+
+        .summary-heading
+            color: $primary_gray
+            font-family: Roboto Slab
+            font-size: $font16mob
+            font-style: normal
+            font-weight: 700
+            line-height: 156.25%
+            margin-top: $m16mob
+
+        .price-row, .shipping-row, .tax-row, .gift-row, .total-row
+            width: 100%
+            display: flex
+            align-items: center
+            justify-content: space-between
+            margin-top: clamp(6px,2.80368vw,24px)
+
+            .price-text, .shipping-text, .tax-text, .checkbox-label
+                color: $secondary_text
+                font-family: Lato
+                font-size: $font14mob
+                font-style: normal
+                font-weight: 400
+                line-height: 142.857%
+
+            .total-text-bold, .bold-price
+                color: $primary_gray
+                font-family: Lato
+                font-size: $font14mob
+                font-style: normal
+                font-weight: 700
+                line-height: 142.857%
+
+            .price
+                color: $primary_gray
+                text-align: right
+                font-family: Lato
+                font-size: $font14mob
+                font-style: normal
+                font-weight: 400
+                line-height: 142.857%
+
+            .checkbox-container
+                display: flex
+                align-items: center
+
+                .checkbox
+                    width: clamp(10px,4.6728vw,40px)
+                    height: clamp(10px,4.6728vw,40px)
+
+                .checkbox-label
+                    margin-left: $m8mob
+
+        .total-row
+
+        .gift-row
+            margin-top: clamp(10px,4.6728vw,40px)
+
+        .separator
+            width: 100%
+            height: 1px
+            background-color: $light_text
+            margin-top: clamp(6px,2.80368vw,24px)
+
+    .checkout-btn
+        width: clamp(199px,92.98872vw,796px)
+        height: clamp(28px,13.083839999999999vw,112px)
+        color: $white
+        text-align: right
+        font-feature-settings: 'clig' off, 'liga' off
+        font-family: Lato
+        font-size: $font14mob
+        font-style: normal
+        font-weight: 500
+        line-height: 142.857%
+        text-transform: uppercase
+        display: flex
+        align-items: center
+        justify-content: center
+        background-color: #434343
+        border-radius: 4px
+        border: none
+        margin-top: $m32mob
+        margin-bottom: clamp(10px,4.6728vw,40px)
+
+        .bag-icon
+            color: $white
+            font-size: $font20mob
+            margin-right: $m8mob
+
+.coupon-container
+    width: 90%
+    height: auto
+    display: flex
+    align-items: center
+    justify-content: center
+    margin: auto
+    margin-top: $m32mob
+
+    .coupon-input
+        width: 50%
+        height: $m64mob
+        color: $secondary_text
+        display: flex
+        font-feature-settings: 'clig' off, 'liga' off
+        font-family: Lato
+        font-size: $font12mob
+        font-style: normal
+        font-weight: 500
+        line-height: 166.667%
+        text-align: center
+        text-transform: capitalize
+        border-bottom-left-radius: 4px
+        border-top-left-radius: 4px
+        border: 1px solid $gray_dark
+
+    .apply-btn
+        width: 50%
+        height: $m64mob
+        color: $white
+        display: flex
+        align-items: center
+        justify-content: center
+        border: none
+        border: 30px solid #262626
+        background-color: #262626
