--- a/src/pages/CartPage/styles/cart_page.css
+++ b/src/pages/CartPage/styles/cart_page.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100;200;300;400;500;600;700;800;900&display=swap");
 .margin {
   display: flex;
   align-items: center;
@@ -139,4 +140,147 @@
 .cards .card .card-lower-row .trash-icon {
   color: #555555;
   font-size: clamp(9px, 4.20552vw, 36px);
+}
+
+.summary {
+  width: 100%;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #E9E9E9;
+  margin-top: clamp(32px, 14.95296vw, 128px);
+}
+.summary .summary-container {
+  width: 47.6987447699%;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+.summary .summary-container .summary-heading {
+  color: #262626;
+  font-family: Roboto Slab;
+  font-size: clamp(8px, 3.73824vw, 32px);
+  font-style: normal;
+  font-weight: 700;
+  line-height: 156.25%;
+  margin-top: clamp(8px, 3.73824vw, 32px);
+}
+.summary .summary-container .price-row, .summary .summary-container .shipping-row, .summary .summary-container .tax-row, .summary .summary-container .gift-row, .summary .summary-container .total-row {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-top: clamp(6px, 2.80368vw, 24px);
+}
+.summary .summary-container .price-row .price-text, .summary .summary-container .price-row .shipping-text, .summary .summary-container .price-row .tax-text, .summary .summary-container .price-row .checkbox-label, .summary .summary-container .shipping-row .price-text, .summary .summary-container .shipping-row .shipping-text, .summary .summary-container .shipping-row .tax-text, .summary .summary-container .shipping-row .checkbox-label, .summary .summary-container .tax-row .price-text, .summary .summary-container .tax-row .shipping-text, .summary .summary-container .tax-row .tax-text, .summary .summary-container .tax-row .checkbox-label, .summary .summary-container .gift-row .price-text, .summary .summary-container .gift-row .shipping-text, .summary .summary-container .gift-row .tax-text, .summary .summary-container .gift-row .checkbox-label, .summary .summary-container .total-row .price-text, .summary .summary-container .total-row .shipping-text, .summary .summary-container .total-row .tax-text, .summary .summary-container .total-row .checkbox-label {
+  color: #555555;
+  font-family: Lato;
+  font-size: clamp(7px, 3.27096vw, 28px);
+  font-style: normal;
+  font-weight: 400;
+  line-height: 142.857%;
+}
+.summary .summary-container .price-row .total-text-bold, .summary .summary-container .price-row .bold-price, .summary .summary-container .shipping-row .total-text-bold, .summary .summary-container .shipping-row .bold-price, .summary .summary-container .tax-row .total-text-bold, .summary .summary-container .tax-row .bold-price, .summary .summary-container .gift-row .total-text-bold, .summary .summary-container .gift-row .bold-price, .summary .summary-container .total-row .total-text-bold, .summary .summary-container .total-row .bold-price {
+  color: #262626;
+  font-family: Lato;
+  font-size: clamp(7px, 3.27096vw, 28px);
+  font-style: normal;
+  font-weight: 700;
+  line-height: 142.857%;
+}
+.summary .summary-container .price-row .price, .summary .summary-container .shipping-row .price, .summary .summary-container .tax-row .price, .summary .summary-container .gift-row .price, .summary .summary-container .total-row .price {
+  color: #262626;
+  text-align: right;
+  font-family: Lato;
+  font-size: clamp(7px, 3.27096vw, 28px);
+  font-style: normal;
+  font-weight: 400;
+  line-height: 142.857%;
+}
+.summary .summary-container .price-row .checkbox-container, .summary .summary-container .shipping-row .checkbox-container, .summary .summary-container .tax-row .checkbox-container, .summary .summary-container .gift-row .checkbox-container, .summary .summary-container .total-row .checkbox-container {
+  display: flex;
+  align-items: center;
+}
+.summary .summary-container .price-row .checkbox-container .checkbox, .summary .summary-container .shipping-row .checkbox-container .checkbox, .summary .summary-container .tax-row .checkbox-container .checkbox, .summary .summary-container .gift-row .checkbox-container .checkbox, .summary .summary-container .total-row .checkbox-container .checkbox {
+  width: clamp(10px, 4.6728vw, 40px);
+  height: clamp(10px, 4.6728vw, 40px);
+}
+.summary .summary-container .price-row .checkbox-container .checkbox-label, .summary .summary-container .shipping-row .checkbox-container .checkbox-label, .summary .summary-container .tax-row .checkbox-container .checkbox-label, .summary .summary-container .gift-row .checkbox-container .checkbox-label, .summary .summary-container .total-row .checkbox-container .checkbox-label {
+  margin-left: clamp(4px, 1.86912vw, 16px);
+}
+.summary .summary-container .gift-row {
+  margin-top: clamp(10px, 4.6728vw, 40px);
+}
+.summary .summary-container .separator {
+  width: 100%;
+  height: 1px;
+  background-color: #9D9D9D;
+  margin-top: clamp(6px, 2.80368vw, 24px);
+}
+.summary .checkout-btn {
+  width: clamp(199px, 92.98872vw, 796px);
+  height: clamp(28px, 13.08384vw, 112px);
+  color: white;
+  text-align: right;
+  font-feature-settings: "clig" off, "liga" off;
+  font-family: Lato;
+  font-size: clamp(7px, 3.27096vw, 28px);
+  font-style: normal;
+  font-weight: 500;
+  line-height: 142.857%;
+  text-transform: uppercase;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #434343;
+  border-radius: 4px;
+  border: none;
+  margin-top: clamp(16px, 7.47648vw, 64px);
+  margin-bottom: clamp(10px, 4.6728vw, 40px);
+}
+.summary .checkout-btn .bag-icon {
+  color: white;
+  font-size: clamp(10px, 4.6728vw, 40px);
+  margin-right: clamp(4px, 1.86912vw, 16px);
+}
+
+.coupon-container {
+  width: 90%;
+  height: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: auto;
+  margin-top: clamp(16px, 7.47648vw, 64px);
+}
+.coupon-container .coupon-input {
+  width: 50%;
+  height: clamp(32px, 14.95296vw, 128px);
+  color: #555555;
+  display: flex;
+  font-feature-settings: "clig" off, "liga" off;
+  font-family: Lato;
+  font-size: clamp(6px, 2.80368vw, 24px);
+  font-style: normal;
+  font-weight: 500;
+  line-height: 166.667%;
+  text-align: center;
+  text-transform: capitalize;
+  border-bottom-left-radius: 4px;
+  border-top-left-radius: 4px;
+  border: 1px solid #434343;
+}
+.coupon-container .apply-btn {
+  width: 50%;
+  height: clamp(32px, 14.95296vw, 128px);
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: none;
+  border: 30px solid #262626;
+  background-color: #262626;
 }/*# sourceMappingURL=cart_page.css.map */
