--- a/src/pages/CartPage/styles/cart_page.sass
+++ b/src/pages/CartPage/styles/cart_page.sass
@@ -283,3 +283,45 @@
         border: none
         border: 30px solid #262626
         background-color: #262626
+
+.empty-container
+    width: 90%
+    height: auto
+    display: flex
+    flex-direction: column
+    align-items: center
+    justify-content: center
+    margin: auto
+
+    .text-container
+        width: 100%
+        height: 40vh
+        display: flex
+        flex-direction: column
+        align-items: center
+        justify-content: center
+        margin-top: $m64mob
+
+        .icon
+            font-size: $m64mob
+            color: $button_blue
+
+        .main-text
+            color: $primary_gray
+            font-family: Lato
+            font-size: $font20mob
+            font-style: normal
+            font-weight: 700
+            line-height: 142.857%
+            margin-top: $m16mob
+
+        .text
+            width: 80%
+            color: $primary_gray
+            font-family: Lato
+            font-size: $font16mob
+            font-style: normal
+            font-weight: 400
+            line-height: 142.857%
+            text-align: center
+            margin-top: $m16mob
