--- a/src/styles/global/global.sass
+++ b/src/styles/global/global.sass
@@ -14,8 +14,9 @@
         overflow-x: hidden !important
 
         header
-            width: 100%
+            width: 90%
             display: flex
+            margin: auto
 
         footer
             width: 100%
