--- a/src/components/Header/SearchBar/styles/search_bar.css
+++ b/src/components/Header/SearchBar/styles/search_bar.css
@@ -76,4 +76,47 @@
 }
 .search-bar .search-bar-input {
   color: #262626;
+}
+
+@media (min-width: 768px) and (max-width: 1024px) {
+  .search-bar {
+    width: clamp(172.5px, 41.3669064748vw, 690px);
+    height: clamp(20px, 4.7961630695vw, 80px);
+    margin-top: 0px !important;
+  }
+  .search-bar .search-bar-input {
+    width: 50%;
+    height: auto;
+    font-size: clamp(7px, 1.5037593985vw, 28px);
+  }
+  .search-bar .select-search-container {
+    margin-right: clamp(8px, 1.7185821697vw, 32px);
+  }
+  .search-bar .select-search-container .select-list {
+    width: auto;
+    height: auto;
+    color: #262626;
+    font-feature-settings: "clig" off, "liga" off;
+    font-family: Lato;
+    font-size: clamp(7px, 1.5037593985vw, 28px);
+    font-style: normal;
+    font-weight: 400;
+    line-height: 142.857%;
+    border: none !important;
+    outline: none !important;
+    box-shadow: none !important;
+  }
+  .search-bar .select-search-container:focus {
+    outline: none !important;
+  }
+  .search-bar .separator {
+    width: 1px;
+    height: clamp(16px, 3.4371643394vw, 64px) !important;
+    margin-right: clamp(6px, 1.4388489209vw, 24px) !important;
+    margin-left: clamp(6px, 1.4388489209vw, 24px) !important;
+    background-color: #9D9D9D;
+  }
+  .search-bar .search-button {
+    font-size: clamp(9px, 1.9334049409vw, 36px) !important;
+  }
 }/*# sourceMappingURL=search_bar.css.map */
