--- a/src/components/Header/styles/header.sass
+++ b/src/components/Header/styles/header.sass
@@ -3,22 +3,95 @@
 body
 
     header
-
         flex-direction: column
+
+        .mobile-header
+            display: flex
+            flex-direction: column
+
+            .upper-content
+                width: 100%
+                height: auto
+                display: flex
+                justify-content: space-between
+                align-items: center
+                margin-top: $m32mob
+
+                .logo
+                    width: clamp(66.5px,31.074119999999997vw,266px)
+                    height: clamp(13.5px,6.30828vw,54px)
+
+            .lower-content
+                width: 100%
+                display: flex
+                align-items: center
+
+        .tablet-header
+            display: none
+
+@media (min-width: 768px) and (max-width: 1024px)
+
+    .mobile-header
+        display: none !important
+
+    .tablet-header
+        width: 100%
+        display: flex !important
+        flex-direction: column
+        margin-top: $m16tab
 
         .upper-content
             width: 100%
-            height: auto
             display: flex
             justify-content: space-between
             align-items: center
-            margin-top: $m32mob
 
             .logo
-                width: clamp(66.5px,31.074119999999997vw,266px)
-                height: clamp(13.5px,6.30828vw,54px)
+                width: clamp(89.5px,21.46282973621103vw, 358px) !important
+                height: clamp(16.5px,3.9568345323741005vw,66px) !important
 
-        .lower-content
+        .nav-container
+            width: 100%
+            display: flex
+            justify-content: space-between
+            align-items: center
+            margin-top: $m16tab
+
+            .links
+                display: flex
+                align-items: center
+
+                .link
+                    color: $light_text
+                    font-feature-settings: 'clig' off, 'liga' off
+                    font-family: Lato
+                    font-size: $font14tab
+                    font-style: normal
+                    font-weight: 400
+                    line-height: 142.857%
+
+                .next
+                    margin-left: $m32tab
+
+            .social
+                display: flex
+                align-items: center
+
+                .social-link
+                    color: $light_text
+                    font-size: $font24tab
+
+            .fb
+                margin-right: $m16tab
+                margin-left: $m16tab
+
+        .lower-container
             width: 100%
             display: flex
             align-items: center
+            justify-content: space-between
+            background-color: $primary_gray
+
+            .categories-logo
+                width: clamp(72.5px,17.38609112709832vw,290px)
+                height: clamp(12px,2.8776978417266186vw,48px)
