--- a/src/styles/global/global.css
+++ b/src/styles/global/global.css
@@ -13,8 +13,9 @@
   overflow-x: hidden !important;
 }
 * body header {
-  width: 100%;
+  width: 90%;
   display: flex;
+  margin: auto;
 }
 * body footer {
   width: 100%;
